Added projects new update and delete, edited show view, added rewards, fixed links so they all work, added partials for rewards and projects

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.input :description, as: :wysihtml5 %>
   <%= f.input :goal %>
   <%= f.input :image_url %>
-  <div class="actions">
+  <div class="action">
     <%= f.button :submit %>
   </div>
 <% end %>
