--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,8 +15,8 @@
           <%= link_to 'Delete', project_path(@project), method: :delete, data: {confirm: "Are you sure?"} %>
         </div>
         <%= render 'stats' %>
-        <%= link_to 'See project backers', "#", class: "btn btn-success btn-lg" %>
-        <%= link_to 'Back this project', "#", class: "btn btn-success btn-lg" %>
+        <%= link_to 'See project backers', project_pledges_path(@project), class: "btn btn-success btn-lg" %>
+        <%= link_to 'Back this project', new_project_pledge_path(@project), class: "btn btn-success btn-lg" %>
         <p class="project-time">This project will expire in 3 days.</p>
       </div>
     </div>
@@ -37,8 +37,8 @@
       <p><%= @project.description %></p>
     </div>
     <div class="col-md-4">
-      <p>Rewards will be rendered in here ...</p>
-      <%= link_to 'Add Reward', "#", class: "btn btn-primary" %>
+      <p><%= render @rewards %></p>
+      <%= link_to 'Add Reward', new_project_reward_path(@project), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
