removed hard coding and replaced with correct paths, added Friendly IDs, Cancancan, fixed payments and pledges and replaced logo with my own

--- a/app/views/projects/_stats.html.erb
+++ b/app/views/projects/_stats.html.erb
@@ -4,7 +4,7 @@
     <!-- number of backers -->
     <div class="col-xs-4 col-sm-12">
       <div class="val">
-        10
+        <%= @pledges.count %>
       </div>
       <div class="lab">
         backers
@@ -14,10 +14,10 @@
     <!-- goal -->
     <div class="col-xs-4 col-sm-12">
       <div class="val">
-        $1000
+        <%= number_to_currency(@project.total_backed_amount, unit: "$", precision: 0) %>
       </div>
       <div class="lab">
-        goal
+        pledge of <%= number_to_currency(@project.goal, unit: "$", precision: 0) %> goal
       </div>
     </div>
 
