--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       </button>
       
       <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo.svg", class: "logo" %>
+      <%= image_tag "logo.png", class: "logo" %>
       <% end  %>
     </div>
 
