--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,3 +1,5 @@
+<% funded = project.funding_percentage %>
+
 <div class="col-md-4 col-sm-6 col-sx-12">
 
   <div class="project-box">
@@ -9,14 +11,16 @@
         <%= link_to project.name, "#" %>
      </div>
 
+     <!-- Project Description -->
       <div class="description">
         This is a description
         <%= project.short_description %>
       </div>
 
+     <!-- Project Progress Bar -->
       <div class="project-bar">
         <div class="progress">
-          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100%" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<%= funded %>" aria-valuemin="0" aria-valuemax="100" style="width:<%= funded %>">
             <span class="sr-only">100% Complete (Success)</span>
           </div>
         </div>
@@ -26,11 +30,11 @@
       <div class="stats">
         <ul>
           <!-- percentage of funding -->
-          <li>100% <br><span class="label">funded</span></li>
+          <li><%= funded %>% <br><span class="label">funded</span></li>
           <!-- total amount pledged (dollars) -->
-          <li>$1000 <br><span class="label">pledged</span></li>
+          <li>$<%= project.total_backed_amount %><br><span class="label">pledged</span></li>
           <!-- days to go 'till deadline -->
-          <li>10 <br><span class="label">days to go</span></li>
+          <li><%= project.days_to_go %> <br><span class="label">days to go</span></li>
         </ul>
       </div>
     </div>
