--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,29 +1,42 @@
 <div class="project-intro">
   <div class="container">
+
+    <!-- project name -->
     <div class="row">
       <div class="col-md-12 text-center">
         <h2 class="project-title"><%= @project.name %></h2>
       </div>
     </div>
+
+    <!-- stats -->
     <div class="row">
       <div class="col-md-8">
         <%= link_to image_tag(@project.image_url, alt: @project.name, width: '100%'), project_path(@project) %>
       </div>
       <div class="col-md-4">
-        <div class="project-mgmt">
-          <%= link_to 'Edit', edit_project_path(@project) %>
-          <%= link_to 'Delete', project_path(@project), method: :delete, data: {confirm: "Are you sure?"} %>
-        </div>
-        <%= render 'stats' %>
-        <%= link_to 'See project backers', project_pledges_path(@project), class: "btn btn-success btn-lg" %>
-        <%= link_to 'Back this project', new_project_pledge_path(@project), class: "btn btn-success btn-lg" %>
-        <p class="project-time">This project will expire in 3 days.</p>
+
+        <% if can? :manage, @project %>
+          <div class="project-mgmt">
+            <%= link_to 'Edit', edit_project_path(@project) %>
+            <%= link_to 'Delete', project_path(@project), method: :delete, data: {confirm: "Are you sure?"} %>          
+          </div>
+        <% end %>
+
+        <%= render 'stats', project: @project, days_to_go: @days_to_go %>
+
+        <% if can? :manage, @project %>
+          <%= link_to 'See project backers', project_pledges_path(@project), class: "btn btn-success btn-lg" %>
+        <% else %>
+          <%= link_to 'Back this project', new_project_pledge_path(@project), class: "btn btn-success btn-lg" %>
+        <% end %>
+        
+        <p class="project-time"><%= funding_status_message @project %></p>
       </div>
     </div>
     <!-- small description -->
     <div class="row">
       <div class="col-md-8">
-        <p class="project-small-description">Project small description.</p>
+        <p class="project-small-description"><%= @project.short_description %></p>
       </div>
     </div>
   </div>
@@ -38,7 +51,9 @@
     </div>
     <div class="col-md-4">
       <p><%= render @rewards %></p>
-      <%= link_to 'Add Reward', new_project_reward_path(@project), class: "btn btn-primary" %>
+      <% if can? :manage, @project.rewards.build %>
+        <%= link_to 'Add Reward', new_project_reward_path(@project), class: "btn btn-primary" %>
+      <% end %>
     </div>
   </div>
 </div>
